# fluxgate

./: .gitignore  Cargo.toml  Dockerfile  FLUXGATE.md  FLUXGATE.txt  build_errors.txt  check_output.txt  check_output_lib.txt  openapi.yaml  project_files.txt
.github/workflows/: ci.yml
admin_dash/: index.html
client_dash/: index.html
config/: default.toml
examples/: multi-agent-workflow.ts
infra/terraform/: main.tf
k8s/: deployment.yaml
migrations/: 0001_initial_schema.sql  0002_add_core_tables.sql  0003_add_webhooks_table.sql  0004_trace_propagation.sql
scripts/: backup.sh
sdks/python/: fluxgate.py
sdks/typescript/: fluxgate.ts
src/: admin.rs  aether.rs  api.rs  audit.rs  auth.rs  cache.rs  chaos.rs  chimera.rs  chronos.rs  cognitive.rs  config.rs  cost_optimizer.rs  dharma.rs  enclave.rs  enclave_v2.rs  energy.rs  entropy.rs  error.rs  eval.rs  evolution.rs  fallback.rs  firewall.rs  ghost.rs  governance.rs  grid.rs  guardrails.rs  health.rs  icarus.rs  immune.rs  intelligence.rs  kernel.rs  ledger.rs  lib.rs  main.rs  multimodal.rs  network.rs  notification.rs  oracle.rs  peak_test.rs  pow.rs  (+17 more)
src/agentic/: fingerprint.rs  loop_protection.rs  memory_graph.rs  mod.rs
src/agents/: bounds.rs  dna_fingerprint.rs  fingerprint.rs  loop_protection.rs  mcp.rs  memory_graph.rs  mod.rs  session.rs  trajectory.rs
src/billing/: finops.rs  mod.rs
src/cognitive/: cerebro.rs
src/compliance/: autopilot.rs  mod.rs  packs.rs
src/core/: pulse.rs
src/ecosystem/: governance_agent.rs  intelligence.rs  marketplace.rs  mod.rs
src/genesis/: graft.rs  healer.rs  mod.rs  synthesis.rs
src/intelligence/: accountability.rs  alignment.rs  deception_detector.rs  federated.rs  hallucination.rs  interpretability.rs
src/mesh/: mod.rs  protocol.rs
terraform/: main.tf
tests/: agent_test.rs  e2e_test.rs  load_test.sh
(+49 files in other folders)
