[package]
name = "fluxgate"
version = "3.5.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.1"
bytes = "1.11.0"
config = "0.15.19"
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
pgvector = { version = "0.4.1", features = ["sqlx"] }
pingora = "0.6.0"
pingora-http = "0.6.0"
pingora-proxy = "0.6.0"
redis = { version = "1.0.3", features = ["tokio-comp"] }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = "1.0.228"
serde_json = "1.0.149"
rand = "0.8.5"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"] }
tiktoken-rs = "0.9.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
opentelemetry = "0.21.0"
opentelemetry-jaeger = "0.20.0"
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22.0"
anyhow = "1.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = "1.33"
wasmtime = "29.0.0"
image = "0.24.9"
hashbrown = "0.14"
pqcrypto-kyber = "0.8.1"
pqcrypto-traits = "0.3.5"
rust-crypto = "0.2.36"
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "set-header", "limit"] }
thiserror = "2.0"
futures = "0.3"
log = "0.4"
hmac = "0.12.1"
tokio-stream = "0.1"
subtle = "2.6.1"
zeroize = { version = "1.8.1", features = ["derive"] }
dashmap = "6.1.0"
tfhe = { version = "0.7", features = ["boolean", "shortint", "integer", "x86_64-unix"] }

[profile.dev]
debug = 0
